[package]
name = "rustlings"
description = "Small exercises to get you used to reading and writing Rust code!"
version = "5.5.1"
authors = [
  "Liv <mokou@fastmail.com>",
  "Carol (Nichols || Goulding) <carol.nichols@gmail.com>",
]
edition = "2021"

[dependencies]
argh = "0.1"
indicatif = "0.18.4"
console = "0.16"
notify = "8.2.0"
toml = "1.1.1+spec-1.1.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
home = "0.5.3"
glob = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
glob = "0.3.0"
